# SparseDrive

sparsedrive_ros2/: README_Visualization.md  package.xml  setup.py  sparsedrive_node.py  static_transforms.py  utils.py
sparsedrive_ros2/test/: test_bev_render.py
sparsedrive_ros2/visualization/: bev_render.py  bev_visualizer.py  drawing_utils.py
sparsedrive_ros2/visualization/sparsedrive_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
sparsedrive_ros2/visualization/sparsedrive_rviz_plugin/src/: sparsedrive_display.cpp  sparsedrive_display.hpp
sparsedrive_ros2/visualization/test/: test_bev_visualizer.py
