<?xml version="1.0"?>
<package format="3">
  <name>sparsedrive_rviz_plugin</name>
  <version>0.0.1</version>
  <description>RViz plugin for SparseDrive</description>
  <maintainer email="dev@null.com">Dev</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>vision_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>multipath_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>